--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -146,7 +146,7 @@ stages:
         tar -xf apache-jmeter-$(jmeterVersion).tgz
       displayName: 'Install Apache JMeter'
     - script: apache-jmeter-$(jmeterVersion)/bin/./jmeter -n -t LoadTest.jmx -o Results.xml -Jhostname=$(STAGING_HOSTNAME)
-      displayName: 'Run Load tests.'
+      displayName: 'Run Load tests'
     - script: |
         sudo apt-get update
         sudo apt-get install xsltproc
